stylesheet.css
/* ... */
.just-perfection-api-panel-corner25 #panel .panel-corner { -panel-corner-radius: 25px; }
.just-perfection-api-panel-corner26 #panel .panel-corner { -panel-corner-radius: 26px; }
.just-perfection-api-panel-corner27 #panel .panel-corner { -panel-corner-radius: 27px; }
.just-perfection-api-panel-corner28 #panel .panel-corner { -panel-corner-radius: 28px; }
.just-perfection-api-panel-corner29 #panel .panel-corner { -panel-corner-radius: 29px; }
.just-perfection-api-panel-corner30 #panel .panel-corner { -panel-corner-radius: 30px; }
.just-perfection-api-panel-corner31 #panel .panel-corner { -panel-corner-radius: 31px; }
.just-perfection-api-panel-corner32 #panel .panel-corner { -panel-corner-radius: 32px; }
.just-perfection-api-panel-corner33 #panel .panel-corner { -panel-corner-radius: 33px; }
.just-perfection-api-panel-corner34 #panel .panel-corner { -panel-corner-radius: 34px; }
.just-perfection-api-panel-corner35 #panel .panel-corner { -panel-corner-radius: 35px; }
.just-perfection-api-panel-corner36 #panel .panel-corner { -panel-corner-radius: 36px; }
.just-perfection-api-panel-corner37 #panel .panel-corner { -panel-corner-radius: 37px; }
.just-perfection-api-panel-corner38 #panel .panel-corner { -panel-corner-radius: 38px; }
.just-perfection-api-panel-corner39 #panel .panel-corner { -panel-corner-radius: 39px; }
.just-perfection-api-panel-corner40 #panel .panel-corner { -panel-corner-radius: 40px; }
.just-perfection-api-panel-corner41 #panel .panel-corner { -panel-corner-radius: 41px; }
.just-perfection-api-panel-corner42 #panel .panel-corner { -panel-corner-radius: 42px; }
.just-perfection-api-panel-corner43 #panel .panel-corner { -panel-corner-radius: 43px; }
.just-perfection-api-panel-corner44 #panel .panel-corner { -panel-corner-radius: 44px; }
.just-perfection-api-panel-corner45 #panel .panel-corner { -panel-corner-radius: 45px; }
.just-perfection-api-panel-corner46 #panel .panel-corner { -panel-corner-radius: 46px; }
.just-perfection-api-panel-corner47 #panel .panel-corner { -panel-corner-radius: 47px; }
.just-perfection-api-panel-corner48 #panel .panel-corner { -panel-corner-radius: 48px; }
.just-perfection-api-panel-corner49 #panel .panel-corner { -panel-corner-radius: 49px; }
.just-perfection-api-panel-corner50 #panel .panel-corner { -panel-corner-radius: 50px; }
.just-perfection-api-panel-corner51 #panel .panel-corner { -panel-corner-radius: 51px; }
.just-perfection-api-panel-corner52 #panel .panel-corner { -panel-corner-radius: 52px; }
.just-perfection-api-panel-corner53 #panel .panel-corner { -panel-corner-radius: 53px; }
.just-perfection-api-panel-corner54 #panel .panel-corner { -panel-corner-radius: 54px; }
.just-perfection-api-panel-corner55 #panel .panel-corner { -panel-corner-radius: 55px; }
.just-perfection-api-panel-corner56 #panel .panel-corner { -panel-corner-radius: 56px; }
.just-perfection-api-panel-corner57 #panel .panel-corner { -panel-corner-radius: 57px; }
.just-perfection-api-panel-corner58 #panel .panel-corner { -panel-corner-radius: 58px; }
.just-perfection-api-panel-corner59 #panel .panel-corner { -panel-corner-radius: 59px; }
.just-perfection-api-panel-corner60 #panel .panel-corner { -panel-corner-radius: 60px; }

.just-perfection-api-no-panel-notification-icon .clock-display StIcon
{
    width: 0;
    height: 0;
    padding: 0;
}

.just-perfection-api-no-panel-notification-icon .clock-display-box
{
    padding: 0;
    spacing: 0;
}

.just-perfection-api-no-app-menu-icon .app-menu-icon
{
    width: 0;
    height: 0;
    margin: 0;
}

.just-perfection-api-no-show-apps-button
{
    width: 0;
    height: 0;
    margin: 0;
    spacing: 0;
}

